--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -270,3 +270,35 @@ body{
     margin: 23px 0px;
 }
 
+/*GALLERY SECTION*/ 
+.gallery_section{
+    display: flex;
+    max-width: 1365px;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 38px;
+    margin-left: 50px;
+}
+.description_section_gallery{
+    margin-bottom: 79px;
+}
+.description_section_gallery h2{
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 36px;
+    text-align: center;
+    margin-bottom: 23px;
+}
+.description_section_gallery .bigText{
+    width: 789px;
+    height: 48px;
+}
+.gallery_images{
+display: flex;
+flex-wrap: wrap;
+}
+.gallery_images>div{
+margin: 0px 12px;
+margin-bottom: 28px;
+}
