--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -295,10 +295,26 @@ body{
     height: 48px;
 }
 .gallery_images{
-display: flex;
-flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
 .gallery_images>div{
-margin: 0px 12px;
-margin-bottom: 28px;
+    margin: 0px 12px;
+    margin-bottom: 28px;
+}
+/* INVITATION SECTION */
+.invitation_section{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 124px;
+    margin-bottom: 121px;
+}
+.invitation_section h2{
+    font-size: 34px;
+    line-height: 36px;
+    margin-bottom: 44px;
+}
+.invitation_section .link{
+    color: #000000;
 }
