--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -12,7 +12,10 @@ body{
     flex-direction: column;
     align-items: center;
 }
-
+a{
+    text-decoration: none;
+    color: #000000;
+}
 /* HEADER */
 .header{
     display: flex;
@@ -48,7 +51,11 @@ body{
     font-style: normal;
     font-weight: normal;
 }
-
+.footer{
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+}
 /* DESC SHELF SECTION */
 .section_img {
     position: relative; 
@@ -311,6 +318,7 @@ body{
     margin-bottom: 121px;
 }
 .invitation_section h2{
+    font-weight: normal;
     font-size: 34px;
     line-height: 36px;
     margin-bottom: 44px;
@@ -343,6 +351,97 @@ body{
      color: #FFFFFF;
      font-size: 14px;
      line-height: 24px;
-     letter-spacing: 0.8px;
-   
+     letter-spacing: 0.8px; 
  }
+
+/* FOOTER */
+.footer{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    width: 1440px;
+    height: 468px;
+
+    background-color: #F9F9F9;
+}
+.nav_footer_left{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    margin-left: 50px;
+    margin-right: 24px;
+    margin-top: 77px;
+}
+.nav_footer_left nav{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    font-size: 22px;
+    line-height: 24px;
+}
+.nav_footer_left>nav a{
+    margin-bottom: 16px;
+    margin-right: 24px;
+}
+.nav_footer_left>div h2{
+    font-weight: normal;
+    margin-bottom: 23px;
+    font-size: 22px;
+    line-height: 24px;
+}
+.nav_footer_left .bigText{
+    width: 348px;
+    height: 64px;
+    text-align: left;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.8px;
+    margin-bottom: 91.45px;
+    color: #A0A0A0;
+}
+.nav_footer_left hr{
+    width: 320px;
+    height: 1px;
+    background-color: #000000;
+}
+.nav_footer_bottom{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: auto;
+    margin-bottom: 28px;
+}
+.nav_footer_bottom a{
+    font-size: 13px;
+    line-height: 15px;
+    margin-left: 37px;
+    color: #707A7F;
+}
+.nav_footer_bottom a:last-child{
+    margin-right: 50px;
+    color: #000000;
+}
+.nav_footer_bottom a{
+    display: block;
+}
+.button_go_up{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position:absolute;
+    width: 82px;
+    height: 82px;
+    top:0px;
+    right: 50px;
+    background-color: #000000;
+}
+.button_go_up>a
+{
+    font-size: 16px;
+    line-height: 16px;
+    color: #FFFFFF;
+}
